--- a/software.html
+++ b/software.html
@@ -39,8 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6zf75krt7xgwxfutqniyn16j3r'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<p><span class="badge badge-light">Mountain View, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/7uc33o3m7e61mycw9jgt6cg9ie'>Senior Backend Software Engineer | CardinalHire</a></h5> 
+<p><span class="badge badge-light">Seattle, WA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/d7y8h5gxip3ri8i6byi4sb1tpe'>Senior Backend Software Engineer | CardinalHire</a></h5> 
+<p><span class="badge badge-light">Mountain View, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<p><span class="badge badge-light">Seattle, WA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oM9WafwL&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=n2HdpMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer - Cloud Data Platform - San Mateo, CA</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oixMafwv'>Infostretch Corporation Careers - Senior Software Engineer (.Net)</a></h5> 
@@ -79,11 +95,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---dev-ex-1902356/?gh_src=82a8057f1'>Staff Software Engineer - Dev Ex | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---dev-ex-1902356/?gh_src=82a8057f1'>Staff Software Engineer - Dev Ex | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -91,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=82a8057f1'>Software Engineer, Identity Experience | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=82a8057f1'>Software Engineer, Identity Experience | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -131,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -139,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -247,7 +263,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTg6afw9&__jvst=Employee+Referral&__jvsd=sPcqIhwV&__jvsc=Twitter&bid=nrb2oMwj'>NICE inContact Careers - Software Engineer II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTg6afw9&__jvst=Employee+Referral&__jvsd=sPcqIhwV&__jvsc=Twitter&bid=nrb2oMwj'>NICE inContact Careers - Software Engineer II</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -355,7 +371,7 @@
 <p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -423,23 +439,7 @@
 <p><span class="badge badge-light">?lmhult, Sweden</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.edisontechnical.co.uk/jobs/software-engineer-4/'>Software Engineer - Edison Technical Recruitment</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='http://rockleyphotonics.applytojob.com/apply/xnms3CMEBP/Senior-ASP-NETC-Software-Engineer'>Senior ASP. NET/C# Software Engineer - Rockley Photonics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698507280-software-engineering-internship-summer-2020'>Bosch Group Software Engineering Internship- Summer 2020 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/gloo/50eef7a5-aca1-49a2-b5aa-f1543192acf2'>Gloo - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
