--- a/product-manager.html
+++ b/product-manager.html
@@ -40,19 +40,31 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/dazn/e2db338c-f534-4a0a-b324-b4fe0ab5f631'>DAZN - Senior Product Manager - Global Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/geckoboard/5d91d4f0-ccd8-4c83-9b79-dc13ff88c468'>Geckoboard - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://engeniumstaffinginc.applytojob.com/apply/rZpkMW6Inp/Product-Manager'>Product Manager - engenium staffing inc - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://nike.referrals.selectminds.com/jobs/senior-product-manager-mpa-52582'>Senior Product Manager, MPA - NIKE, Inc. Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/dazn/e2db338c-f534-4a0a-b324-b4fe0ab5f631'>DAZN - Senior Product Manager - Global Platform</a></h5> 
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/meilleursagents/4fb9b62f-9cb3-478c-a5c7-d54d5af1d5a5'>MeilleursAgents - Product designer</a></h5> 
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SchoolApply/743999698531816-user-experience-product-manager'>SchoolApply User Experience Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SchoolApply/743999698531816-user-experience-product-manager'>SchoolApply User Experience Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-594480/?gh_src=82a8057f1'>Senior/Group Product Manager | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-594480/?gh_src=82a8057f1'>Senior/Group Product Manager | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -100,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -132,7 +144,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -222,7 +234,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/nl/o/product-manager-internship-rotterdam'>
+<h5><a href='https://helloprint.recruitee.com/l/nl/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -348,7 +360,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indexexchange/jobs/1935295'>Job Application for Senior Product Manager at Index Exchange</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indexexchange/jobs/1935295'>Job Application for Senior Product Manager at Index Exchange</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -440,18 +452,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/cision-us/job/oYNDafwi'>Cision Global Careers - Sr. Product Designer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/patientpop/jobs/1903083'>Job Application for Senior Product Manager, Websites at PatientPop</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
-<p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
